# ex5

./: CMakeLists.txt  ex5  ex5.c  ex5.out
ex5.out.dSYM/Contents/: Info.plist
ex5.out.dSYM/Contents/Resources/DWARF/: ex5.out
ex5.out.dSYM/Contents/Resources/Relocations/aarch64/: ex5.out.yml
