cmake_minimum_required(VERSION 3.29)
project(ex5 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(ex5
    ex5.c)
2
P1
2
P2
1
2
2
Al Tesaber Elai
Nasrin Kadri
2025
sasaas
2
Pokemon Theme
Jason Paige
1998
saas
2
Never Gonna Give You Up
Rick Astley
1987
sasa
1
1
0
4
1
3
0
4
4
1
2
0
4
2
1
0
4
3
1
0
6
3
1
1
2
Bohemian Raphsody
Queen
1975
dasa
6
3
3
2
4